# justifier

./: .gitignore  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-c-audio-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/studio/ninthhouse/justifier/: MainActivity.kt
android/app/src/main/res/drawable/: ic_splash.xml
android/app/src/main/res/values-v31/: styles.xml
docs/: app-design.md  drone-synthesis-findings.md  musical-memoir.txt  tanpura-ideas.md  tuner-design.md  tuning-theory-primer.txt
docs/archived/superpowers/specs/: 2026-03-31-architecture-options.md  2026-04-05-lattice-explorer-design.md  base-sc.dsp
docs/explore/: general-layout.md
docs/reviews/: 2026-05-20-checkpoint-architecture.md  2026-05-20-checkpoint-review.md  2026-05-20-checkpoint.md
docs/superpowers/specs/: 2026-03-26-justifier-design.md  2026-04-05-lattice-explorer-design.md
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
justifier_native/: dummy.c  dummy.m  include  justifier_native.podspec  src
lib/: main.dart
lib/audio/: audio.dart  audio_engine.dart  engine_provider.dart  justifier_audio_bindings.dart  waveform_type.dart
lib/config/: keybindings.dart
lib/core/: persistence.dart
lib/drone/: drone_state.dart
lib/models/: lattice_state.dart  workspace_state.dart
lib/providers/: engine-provider.dart  engine_provider.dart  lattice_provider.dart  workspace-provider.dart  workspace_provider.dart  zoom-provider.dart
lib/screens/: drone_screen.dart  explore_screen.dart  home_screen.dart  settings_screen.dart  tuner_screen.dart
lib/settings/: prefs_provider.dart  reference_pitch_state.dart  ui_scale_state.dart
lib/theme/: app-theme.dart  app_theme.dart  tuner_colors.dart
lib/tuner/: mic_permission.dart  pitch_state.dart  ratio.dart  ratio_match_provider.dart  tuner_indicator.dart  tuner_settings_drawer.dart  tuner_settings_state.dart
lib/widgets/: app-shell.dart  app_shell.dart  connection-status-badge.dart  connection_status_badge.dart  ratio-input.dart  ratio_input.dart  voice-card.dart  voice_card.dart  wave-column.dart  wave_column.dart  waveform-selector.dart  waveform_selector.dart
lib/widgets/lattice/: lattice_canvas.dart  lattice_controls.dart  lattice_node_widget.dart  lattice_panel.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: Podfile
macos/Runner/: BuildJustifierNative.sh
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: .gitignore  CMakeLists.txt
native/dsp/: bowed_string.dsp  brown_noise.dsp  chorus.dsp  delay.dsp  flanger.dsp  fm.dsp  justifier_filter.lib  lfnoise0.dsp  lfnoise1.dsp  lfnoise2.dsp  noise.dsp  organ.dsp  parametric_eq.dsp  phaser.dsp  pink_noise.dsp  pulse.dsp  reverb.dsp  saturation.dsp  saw.dsp  sine.dsp  square.dsp  tanpura_ensemble.dsp  triangle.dsp  white_noise.dsp
native/experiments/: fds_string.dsp  fds_tanpura.dsp  mi_bowed.dsp  mi_tanpura.dsp  tanpura.dsp
native/src/: audio_engine.c  audio_engine.cpp  faust_wrapper.cpp  faust_wrapper.h  faust_wrapper_macos.cpp  ios_audio_session.m  justifier_audio.h  pitch_detector.cpp  voice_slot.h
native/test/: test_audio.c
native/tools/: analyze.py  render.cpp  render.sh  render_ensemble.py
test/: audio_engine_test.dart  lattice_provider_test.dart  lattice_state_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
